Zaktualizowana pierwsza wersja gry